--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,82 @@
-.App {
+.crypto-search {
   text-align: center;
 }
 
-.App-logo {
+.crypto-search-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .crypto-search-logo {
+    animation: crypto-search-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
+.crypto-search-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+.crypto-search {
+  min-height: 100vh;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  padding: 40px;
+  font-size: 16px;
+  background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
+}
+
+input{
+  padding-left: 5px;
+  font-size: 20px;
+  width: 40%;
+  height: 30px;
+  border-radius: 4px;
+  border: 0;
+  outline: 0;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+table{
+  width: 90%;
+  border-collapse: separate;
+  border-spacing: 0 1em;
+}
+
+thead{
+  background-color: #006494;
+  color: white;
+  text-align: center;
+}
+
+tbody > tr{
+  text-align: right;
+}
+
+thead > tr > td {
+  padding: 4px 10px;
+}
+
+.rank{
+  text-align: center;
+  font-weight: bold;
+}
+
+.logo{
+  display: flex;
+  justify-content: flex-start;
+  padding-left: 10%;
+  gap: 10px;
+}
+
+.symbol{
+  text-align: center;
+}
+
+@keyframes crypto-search-logo-spin {
   from {
     transform: rotate(0deg);
   }
