--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,35 @@
   background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
 }
 
-input{
+.input-group {
+  width: min(500px, 100%);
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.input-group__input {
+  padding: 0 12px 0 48px;
+  width: 100%;
+  height: 48px;
+  border-radius: 4px;
+  font-size: 18px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  outline: 0;
+}
+
+.input-group__input:focus-within {
+  border: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+.input-group__icon {
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  left: 12px;
+}
+
+/* input {
   padding-left: 5px;
   font-size: 20px;
   width: 40%;
@@ -38,21 +66,21 @@ input{
   border: 0;
   outline: 0;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-}
+} */
 
-table{
+table {
   width: 90%;
   border-collapse: separate;
   border-spacing: 0 1em;
 }
 
-thead{
+thead {
   background-color: #006494;
   color: white;
   text-align: center;
 }
 
-tbody > tr{
+tbody > tr {
   text-align: right;
 }
 
@@ -60,19 +88,19 @@ thead > tr > td {
   padding: 4px 10px;
 }
 
-.rank{
+.rank {
   text-align: center;
   font-weight: bold;
 }
 
-.logo{
+.logo {
   display: flex;
   justify-content: flex-start;
   padding-left: 10%;
   gap: 10px;
 }
 
-.symbol{
+.symbol {
   text-align: center;
 }
 
@@ -82,5 +110,11 @@ thead > tr > td {
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@media (max-width: 550px) {
+  .input-group__input {
+    font-size: 16px;
   }
 }
